Bug 394013, vfyserv hostname lookup failure r=nelson